--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pymongo==4.5.0
-motor==3.3.2
-python-dotenv==1.0.0
+fastapi
+uvicorn[standard]
+pymongo
+motor
+python-dotenv
 pydantic
 pydantic-settings
+PyMuPDF
+python-multipart
+aiofiles
+pillow
+pytesseract
