--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.23",
     "@vueuse/core": "^14.2.1",
+    "axios": "^1.13.5",
+    "lodash": "^4.17.23",
     "lucide-vue-next": "^0.564.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
